<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_install">Install</string>
    <string name="app_name">TwitterUiClone</string>
    <string name="live">LIVE</string>
    <string name="host">Host</string>
    <string name="app_open">Open</string>
    <string name="hello_blank_fragment">This is a fragment</string>
    <string name="spaces_just_for_you">Spaces just for you</string>
    <string name="people_you_follow_are_tuning_in_now">people you follow are tuning in now</string>
    <string name="Top_text">Tariq nasheed is talking</string>
    <string name="kehab">kehab</string>
    <string name="create_your_space">Create your Space</string>
    <string name="spaces">Spaces</string>
    <string name="twitter">Twitter</string>
    <string name="search">Search Twitter</string>
    <string name="trends_for_you">Trends for you</string>
    <string name="headline">Messi scores late winner at Bernabeu</string>
    <string name="topic">Sports</string>
    <string name="fab">FAB</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="all">All</string>
    <string name="mentions">Mentions</string>
</resources>
