<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/web_gray_50"
    android:paddingBottom="50dp"
    tools:context="ui.search.SearchFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_image"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/stephenamell"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <SearchView
                android:id="@+id/twitter_search"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:queryHint="@string/search"
                android:queryBackground="#ffffff"
                android:iconifiedByDefault="false"
                android:searchIcon="@null"
                app:layout_constraintStart_toEndOf="@id/user_image"
                app:layout_constraintTop_toTopOf="parent"/>


            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_vector_settings_stroke_link"
                android:contentDescription="@string/settings" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_trend_view"
                android:layout_width="match_parent"
                android:layout_height="185dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/img11"
                app:layout_constraintTop_toBottomOf="@id/twitter_search">
                
                <TextView
                    android:id="@+id/topic_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/headline_textview"
                    tools:text="Sports"/>

                <TextView
                    android:id="@+id/live_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/live"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toEndOf="@id/topic_textview"
                    app:layout_constraintBottom_toTopOf="@id/headline_textview"/>

                <TextView
                    android:id="@+id/headline_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:text="Messi scores late winner at Bernabeu"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/trends_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/trends_for_you"
                android:textColor="@color/white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/main_trend_view"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>