<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/talking_in_space"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/chirp_bold"
        android:text="@string/Top_text"
        android:textColor="@color/exo_white"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/space_box"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/space_box"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        app:cardBackgroundColor="@color/blue_500"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/talking_in_space">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animated_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="10dp"
                app:layout_constraintBottom_toTopOf="@+id/space_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_colorFilter="@color/white"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/speakwave" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_margin="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_more_vert_24"
                android:contentDescription="@string/kehab" />


            <TextView
                android:id="@+id/live"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:layout_margin="15dp"
                android:fontFamily="@font/chirp_bold"
                android:text="@string/live"
                android:textAllCaps="true"
                android:textColor="#ffffff"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/animated_icon"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/space_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/chirp_bold"
                android:textColor="#ffffff"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/live"
                tools:text="Foundational Black Americans are also Africans" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_3"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/teta"
                app:civ_border_color="@android:color/transparent"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image_2"
                app:layout_constraintStart_toStartOf="@+id/profile_image_2"
                app:layout_constraintTop_toTopOf="@+id/profile_image_2"
                tools:ignore="ImageContrastCheck,ImageContrastCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/stephenamell"
                app:civ_border_color="@android:color/transparent"
                app:civ_border_width="2dp"
                app:layout_constraintBottom_toBottomOf="@+id/profile_image_1"
                app:layout_constraintStart_toStartOf="@+id/profile_image_1"
                app:layout_constraintTop_toTopOf="@+id/profile_image_1" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image_1"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/mobilerobot"
                app:civ_border_color="@android:color/transparent"
                app:civ_border_width="2dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/space_name" />

            <TextView
                android:id="@+id/no_of_listeners"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/chirp_light"
                android:gravity="center_vertical"
                android:textColor="@color/exo_white"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/profile_image_3"
                app:layout_constraintTop_toBottomOf="@id/space_name"
                tools:ignore="TextContrastCheck"
                tools:text="1291 listening" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/footer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@color/toolbar_transparent_button_background"
                android:padding="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profile_image_1">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profile_image_4"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/teta"
                    app:civ_border_color="#005477"
                    app:civ_border_width="2dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/space_host_name"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/chirp_bold"
                    android:gravity="center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    app:layout_constraintStart_toEndOf="@id/profile_image_4"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Mikel Arteta" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/host"
                    android:layout_width="35dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:background="@drawable/host_body"
                    android:backgroundTint="@color/blue_500"
                    app:layout_constraintBottom_toTopOf="@+id/space_host_bio"
                    app:layout_constraintStart_toEndOf="@id/space_host_name"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gothic_a1_bold"
                        android:text="@string/host"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/space_host_bio"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/chirp_regular"
                    android:paddingBottom="10dp"
                    android:textColor="#ffffff"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/profile_image_4"
                    tools:text="Okay, let us host this space the way i like it lol + we can discuss more about the insecurity on here. " />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>


